--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <div id="flex">
             <div class="border" id="pembuka">
                 <h2>Pendahoeloean</h2>
-                <p>Halo ret, selamat datang di website yang sederhana ini 🤗, sebelumnya kalo bisa baca web ini pas ga lagi rame dan jugak kalo bisa sekali baca ya. Semoga kamu betah baca sampe akhir yak (jangan ilfeel pliszz), hehe. Boleh sambil dengerin musik kok kalo mau, pencet aja lagu yang kamu mau di samping. </p>
+                <p>Halo ret, selamat datang di website yang sederhana ini 🤗, sebelumnya kalo bisa baca web ini pas ga lagi rame dan jugak kalo bisa sekali baca selesai ya. Semoga kamu betah baca sampe akhir yak (jangan ilfeel pliszz), hehe. Boleh sambil dengerin musik kok kalo mau, pencet aja lagu yang kamu mau di samping. </p>
                 <p>Sadar ga si coy, kita udah chatan hampir 2 bulan udah lamanya, aku kayak ngerasa ada sesuatu yang pingin kuungkapin gitu lo.
                     Akhirnya aku buat website ini, yaa sekalian ngasah skill ku juga seh, hihi 😁</p>
                 <img src="Source/chat.jpg" style="max-width: 500px;" class="gambar" alt="Awal-awal ngechat">
