--- a/confes.html
+++ b/confes.html
@@ -29,9 +29,9 @@
             </p>
         </div>
         <div id="reaksi" class="isi">
-            <a href="https://www.youtube.com/watch?v=nyuo9-OjNNg" id="link1">Aku suka balik 🤫🤭</a>
-            <a href="https://www.youtube.com/watch?v=1TO48Cnl66w" id="link2">Makasih udah suka aku 🤗🙂</a>
-            <a href="https://www.youtube.com/watch?v=3XqqkrJENB4" id="link3">Apasih zul gajelas banget kamu 😡</a>
+            <a href="https://www.youtube.com/watch?v=nyuo9-OjNNg" id="link1" target="_blank">Aku suka balik 🤫🤭</a>
+            <a href="https://www.youtube.com/watch?v=1TO48Cnl66w" id="link2" target="_blank">Makasih udah suka aku 🤗🙂</a>
+            <a href="https://www.youtube.com/watch?v=3XqqkrJENB4" id="link3" target="_blank">Apasih zul gajelas banget kamu 😡</a>
         </div>
         <div id="penutupan" class="isi">
             <h2>Penoetoepan</h2>
