--- a/confes.html
+++ b/confes.html
@@ -29,7 +29,7 @@
             </p>
         </div>
         <div id="reaksi" class="isi">
-            <a href="https://www.youtube.com/watch?v=nyuo9-OjNNg" id="link1" target="_blank">Aku suka balik 🤫🤭</a>
+            <a href="https://www.youtube.com/watch?v=Q49pnA4jsp8" id="link1" target="_blank">Aku suka balik 🤫🤭</a>
             <a href="https://www.youtube.com/watch?v=1TO48Cnl66w" id="link2" target="_blank">Makasih udah suka aku 🤗🙂</a>
             <a href="https://www.youtube.com/watch?v=3XqqkrJENB4" id="link3" target="_blank">Apasih zul gajelas banget kamu 😡</a>
         </div>
